--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="sv">
 <head>
@@ -10,47 +9,66 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <style>
         body, html, #root { height: 100%; margin: 0; padding: 0; overflow: hidden; }
-        .leaflet-container { height: 100%; width: 100%; background: #f0f0f0; }
+        .leaflet-container { height: 100%; width: 100%; background: #0f172a; }
         .custom-popup .leaflet-popup-content-wrapper {
-            border-radius: 12px;
+            border-radius: 16px;
             padding: 0;
             overflow: hidden;
+            box-shadow: 0 20px 50px -12px rgba(0, 0, 0, 0.5);
+            border: 1px solid rgba(255,255,255,0.1);
         }
         .custom-popup .leaflet-popup-content {
             margin: 0;
-            width: 240px !important;
+            width: 280px !important;
         }
-        .stop-popup .leaflet-popup-content {
-            width: auto !important;
-            max-width: 240px;
+        .custom-popup .leaflet-popup-tip-container {
+            display: none;
+        }
+        .custom-tooltip {
+            background: rgba(255, 255, 255, 0.98);
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+            padding: 6px 12px;
+            font-family: ui-sans-serif, system-ui, sans-serif;
+        }
+        .leaflet-div-icon {
+            background: transparent;
+            border: none;
         }
     </style>
 <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@vercel/node": "https://esm.sh/@vercel/node@^5.5.17",
-    "react-leaflet": "https://esm.sh/react-leaflet@^5.0.0",
-    "process": "https://esm.sh/process@^0.11.10",
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react-leaflet": "https://esm.sh/react-leaflet@4.2.1?deps=react@18.2.0,react-dom@18.2.0",
+    "leaflet": "https://esm.sh/leaflet@1.9.4",
+    "lucide-react": "https://esm.sh/lucide-react@0.462.0?deps=react@18.2.0",
+    "@vercel/analytics/react": "https://esm.sh/@vercel/analytics@1.6.1/react?deps=react@18.2.0",
+    "protobufjs": "https://esm.sh/protobufjs@7.4.0",
+    "process": "https://esm.sh/process@0.11.10",
+    "buffer": "https://esm.sh/buffer@6.0.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "@vercel/analytics/": "https://esm.sh/@vercel/analytics@^1.6.1/",
+    "react/": "https://esm.sh/react@^19.2.4/",
     "path": "https://esm.sh/path@^0.12.7",
     "fs": "https://esm.sh/fs@^0.0.1-security",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "leaflet": "https://esm.sh/leaflet@^1.9.4",
-    "buffer": "https://esm.sh/buffer@^6.0.3",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "protobufjs": "https://esm.sh/protobufjs@^8.0.0",
     "yauzl-promise": "https://esm.sh/yauzl-promise@^4.0.0",
     "csv-parse": "https://esm.sh/csv-parse@^6.1.0",
-    "@vercel/analytics/": "https://esm.sh/@vercel/analytics@^1.6.1/",
-    "mongodb": "https://esm.sh/mongodb@^7.0.0"
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.3",
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.5.33",
+    "mongodb": "https://esm.sh/mongodb@^7.1.0",
+    "dotenv": "https://esm.sh/dotenv@^17.2.4",
+    "stream": "https://esm.sh/stream@^0.0.3",
+    "stream/": "https://esm.sh/stream@^0.0.3/"
   }
 }
 </script>
 </head>
-<body class="bg-gray-100">
+<body class="bg-slate-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
